force-app/main/default/objects/Field_History__c/fields/Change_Sobject_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Change_Sobject_API_Name__c</fullName>
    <description>The namespace-qualified API name of the SObject that was changed</description>
    <label>Change SObject API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>