force-app/main/default/objects/Field_History__c/fields/Change_Time__c.field-meta.xml
<CustomField>
    <fullName>Change_Time__c</fullName>
    <description>The time and date when the change was made</description>
    <label>Change Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>