force-app/main/default/objects/Field_History__c/fields/Change_User__c.field-meta.xml
<CustomField>
    <fullName>Change_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who made the change</description>
    <label>Change User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Field_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>