force-app/main/default/objects/Field_History__c/fields/New_Value_Text__c.field-meta.xml
<CustomField>
    <fullName>New_Value_Text__c</fullName>
    <description>The new value of the field as plain text up to 255 characters</description>
    <label>New Value (Text)</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>