force-app/main/default/objects/Field_History__c/fields/Old_Value_Text__c.field-meta.xml
<CustomField>
    <fullName>Old_Value_Text__c</fullName>
    <description>The old value of the field as a plain text, up to 255 characters</description>
    <label>Old Value (Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>