force-app/main/default/objects/Field_History__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>The Salesforce ID of the SObject record that was changed. This is a text pseudo-ID in order to support polymorphism.</description>
    <label>Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>