force-app/main/default/objects/Field_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sobject_API_Name__c</columns>
    <columns>Record_Id__c</columns>
    <columns>Field_API_Name__c</columns>
    <columns>Old_Value_Text__c</columns>
    <columns>New_Value_Text__c</columns>
    <columns>Change_User__c</columns>
    <columns>Change_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>